--- a/src/app/historia/historia.component.html
+++ b/src/app/historia/historia.component.html
@@ -3,7 +3,7 @@
   <form class="d-flex" role="search">
     <div class="input-group">
       <input id="searchQuery" name="searchQuery" [(ngModel)]="searchQuery" class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
-      <button (click)="optenerdata()" class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+      <button (click)="optenerdata()" (click)="sonido()" class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
     </div>
   </form>
 </div>
