--- a/src/app/home/news/news.component.html
+++ b/src/app/home/news/news.component.html
@@ -1,15 +1,4 @@
 <h1 class="text-center">Noticias</h1>
-<div class="row">
-  <div class="col-4" *ngFor="let archivo of listarchivo">
-    <div class="alert alert-primary" role="alert">
-      <p class="text-center"><b>{{ archivo.name }}</b></p>
-      <p>{{ archivo.content }}</p>
-      <p>{{ archivo.date }}</p>
-      <button class="btn btn-primary">Vista previa</button>
-    </div>
-  </div>
-</div>
-
 <div class="form-group">
   <label for="file">Seleccionar archivo:</label>
   <div class="custom-file">
@@ -21,4 +10,29 @@
 <div *ngIf="fileUrl">
   <img [src]="fileUrl" alt="Archivo cargado">
 </div>
+
+<div class="mb-3 d-flex justify-content-center">
+  <form class="d-flex" role="search">
+    <div class="input-group">
+      <input id="searchQuery" name="searchQuery"  class="form-control" type="search" placeholder="{{'search'|translate}}" aria-label="Search" style="width: 350px;">
+      <button  class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+    </div>
+  </form>
+</div>
+
+<div class="row">
+  <div class="row">
+    <div class="col-4" *ngFor="let archivos of listararchivos">
+      <div class="alert alert-primary d-grid gap-2" role="alert">
+        <div class="card card-body">
+          <p class="text-center"><b>{{ archivos.name }}</b></p>
+          <p>{{ archivos.content }}</p>
+          <p>{{archivos.date}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
